# django-settlers

./: .gitignore  Dockerfile  LICENSE  MANFEST.in  README.md  settlersfix.py  setup.cfg  setup.py
src/settlers/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/settlers/migrations/: 0001_initial.py
src/settlers/static/settlers/js/: app.js  common.js  layouts.js  models.js  utils.js
src/settlers/static/settlers/js/models/: board.js  game.js
src/settlers/static/settlers/js/views/: canvas.js  general.js
src/settlers/templates/settlers/: game.html  listing.html  new.html  random.html  seafarers.html
src/settlers/templates/settlers/emails/: _template.html  base.html  trade.html  trade.txt  turn.html  turn.txt
src/settlers/templates/settlers/includes/: build.html  development.html  help.html  robber.html  setup.html  trade_offer.html  trade_offer_sync.html  trade_response.html
tests/: settings.py  urls.py
tests/data/: game1.json  game2.json  game3.json  tradeOffers1.game1.json
tests/templates/settlers/: base.html
