[metadata]
name = django-settlers
url = https://github.com/dakrauth/
description = A simple async Settlers implementation
long_description = file: README.md
author = David A Krauth
author_email = dakrauth@gmail.com
platforms = [any]
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Turn Based Strategy

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.7
zip_safe = False
install_requires = 
    Django>=2.2.8,<3.1
    djangorestframework>=3.10.3
    django_extensions>=2.2.9

[options.packages.find]
where = src
[options.extras_require]
test =
    pytest
    pytest-django
    pytest-cov
dev = ipdb
