[metadata]
name = django-settlers
url = https://github.com/dakrauth/
description = A simple async Settlers implementation
long_description = file: README.md
author = David A Krauth
author_email = dakrauth@gmail.com
platforms = [any]
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Turn Based Strategy

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8
zip_safe = False
install_requires = 
    Django>=3.2.11,<5.0
    djangorestframework>=3.10.3
    django_extensions>=2.2.9
    django-vanilla-views==3.0.0

[options.packages.find]
where = src
[options.extras_require]
test =
    pytest
    pytest-django
    pytest-cov
dev = ipdb
